# isolated-vm

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .lldbinit  .npmignore  .prebuildrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile.alpine  Dockerfile.debian  FUNDING.yml  ISSUE_TEMPLATE.md  README.md  binding.gyp  clang-tidy-wrapper  embed.sh  eslint.config.js  go_build.py  include.js  index.d.ts  index.js  inspector-example.js  isolated-vm.d.ts  isolated-vm.js  package-lock.json  package.json  parallel-sort-example.js  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  tsconfig.base.json  tsconfig.json
.changeset/: config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/actions/v8/: action.yml
.github/actions/v8/gclient-sync/: action.yml
.github/actions/v8/gclient-sync/composite/: action.yml
.github/actions/v8/gclient-sync/docker/: Dockerfile  action.yml  sync
.github/actions/v8/gn/: action.yml
.github/workflows/: build-test-release.yml  build.yml  prebuild.yml  validate-pr.yml
docker/: Dockerfile.clang  Dockerfile.depot_tools  Dockerfile.development  Dockerfile.gn_alpine  Dockerfile.node  Dockerfile.node_git  Dockerfile.node_sources  Dockerfile.v8  Dockerfile.v8_alpine  Dockerfile.v8_git  Dockerfile.v8_sources  Dockerfile.v8_synced  compose.yaml
docs/: LEGACY.md
native-example/: README.md  binding.gyp  example.cc  package.json  usage.js
patches/: 00.trickshot.patch  10.clang  10.gcc  10.shared-monolith  10.stl-warning.patch  10.symbols.patch  20.cstddef.patch  20.function_ref.patch  20.stl.patch  30.undispose.patch
playground/: CMakeLists.txt  sandbox.cc
scripts/: .lsan-supressions  .ubsan-supressions  bun_asan  clang_wrap  docker_env_bootstrap  download_test_stl_headers  ivm_write_env  node_asan  nodejs_select  preload_asan  run-prebuild.js  triplet_util  v8_build  v8_configure  v8_select
scripts/cmake/: expand_def  host_platform
src/: apply_from_tuple.h  array_buffer_shim.cc  class_handle.h  context_handle.cc  context_handle.h  convert_param.h  external_copy.cc  external_copy.h  external_copy_handle.cc  external_copy_handle.h  external_copy_nortti.cc  inspector.cc  inspector.h  isolate.cc  isolate_handle.cc  isolate_handle.h  isolate_holder.h  isolated_vm.h  lib_handle.cc  lib_handle.h  module_handle.cc  module_handle.h  native_module_handle.cc  native_module_handle.h  platform_delegate.h  reference_handle.cc  reference_handle.h  runnable.h  script_handle.cc  script_handle.h  session_handle.cc  session_handle.h  shareable_context.cc  shareable_context.h  shareable_isolate.cc  shareable_isolate.h  shareable_persistent.h  thread_pool.h  three_phase_task.cc  three_phase_task.h  (+5 more)
src/api/: isolated_vm.h
src/external_copy/: external_copy.cc  external_copy.h  external_copy_nortti.cc  serializer.cc  serializer.h  serializer_nortti.cc  string.cc  string.h
src/isolate/: allocator.cc  allocator.h  allocator_nortti.cc  class_handle.cc  class_handle.h  convert_param.h  cpu_profile_manager.cc  cpu_profile_manager.h  environment.cc  environment.h  executor.cc  executor.h  external.h  functor_runners.h  holder.cc  holder.h  inspector.cc  inspector.h  legacy.h  node_wrapper.h  platform_delegate.cc  platform_delegate.h  remote_handle.h  run_with_timeout.h  scheduler.cc  scheduler.h  shareable_context.cc  shareable_context.h  shareable_persistent.h  specific.h  stack_trace.cc  stack_trace.h  strings.h  three_phase_task.cc  three_phase_task.h  util.h  v8_inspector_wrapper.h  v8_version.h
src/isolate/generic/: array.h  callbacks.h  error.h  extract_params.h  handle_cast.h  object.h  read_option.h
src/lib/: covariant.h  lockable.h  suspend.h  thread_pool.cc  thread_pool.h  timer.cc  timer.h
src/module/: callback.cc  callback.h  context_handle.cc  context_handle.h  cpu_profiler_handle.cc  cpu_profiler_handle.h  evaluation.cc  evaluation.h  external_copy_handle.cc  external_copy_handle.h  external_copy_nortti.cc  isolate.cc  isolate_handle.cc  isolate_handle.h  lib_handle.cc  lib_handle.h  module_handle.cc  module_handle.h  native_module_handle.cc  native_module_handle.h  reference_handle.cc  reference_handle.h  script_handle.cc  script_handle.h  session_handle.cc  session_handle.h  transferable.cc  transferable.h  transferable_handle.h
tests/: apply-sync-promise.js  array-buffer-copy.js  array-close-to-limit.js  async-rentry-deadlock.js  async-rentry.js  buffer-copy.js  busy-dispose.js  cached-data.js  catastrophic-error.js  child-gc-storm.js  cleanup-race.js  context-leak.js  context-release.js  context-spam.js  cpp-exceptions.js  cpu-profiler.js  cpu-wall-timer.js  cross-context-instance.js  deadlock.js  dispose-race.js  dispose-while-running.js  disposed-isolate-context.js  double-ref.js  exception-info.js  external-copy-strings.js  garbage-collection-busy-child-deadlock.js  garbage-collection-propagation.js  garbage-collection.js  heap-limit-array-spread.js  heap-limit-async.js  heap-limit-copy-into.js  heap-limit-high.js  heap-limit-incremental-sweep.js  heap-limit-json-abuse.js  heap-limit-nested.js  heap-limit-range-error.js  heap-stats.js  hrtime.js  idle-gc.js  ignored-async.js  (+41 more)
tests/lib/: v8-version.js
tests/manual/: cb-hang.js
